...
                }));
      },
      builder: (context, state) {
        return Scaffold(
          backgroundColor: Colors.grey[800],
          body: SingleChildScrollView(
            key: const ValueKey("registerPageView"),
            child: Column(
              children: <Widget>[
                Stack(
                  alignment: Alignment.topCenter,
                  children: <Widget>[
                    Align(
...
                      alignment: Alignment.topLeft,
                      child: Padding(
                        padding: const EdgeInsets.only(top: 25),
                        child: IconButton(
                            icon: const Icon(Icons.arrow_back,
                                color: Colors.black),
                            key: const ValueKey("registerPageLoginButton"),
                            onPressed: () {
                              Navigator.popAndPushNamed(context, '/sign-in');
                            }),
                      ),
                    ),
                    Align(
...
                        ? AutovalidateMode.always
                        : AutovalidateMode.disabled,
                    child: Padding(
                      padding: const EdgeInsets.all(20.0),
                      child: Column(children: [
                        TextFormField(
                          key: const ValueKey("registerPageFullNameInput"),
                          decoration: const InputDecoration(
                            border: OutlineInputBorder(
                                borderRadius:
                                    BorderRadius.all(Radius.circular(20.0)),
                                borderSide:
                                    BorderSide(color: Colors.grey, width: 1)),
...
                                      (_) => null),
                        ),
                        const SizedBox(
                          height: 35,
                        ),
                        TextFormField(
                          key: const ValueKey("registerPageEmailInput"),
                          decoration: const InputDecoration(
                            border: OutlineInputBorder(
                                borderRadius:
                                    BorderRadius.all(Radius.circular(20.0)),
                                borderSide:
                                    BorderSide(color: Colors.grey, width: 1)),
...
                                      (_) => null),
                        ),
                        const SizedBox(
                          height: 35,
                        ),
                        TextFormField(
                          key: const ValueKey("registerPagePasswordInput"),
                          decoration: const InputDecoration(
                            border: OutlineInputBorder(
                                borderRadius:
                                    BorderRadius.all(Radius.circular(20.0)),
                                borderSide: BorderSide(
                                  color: Colors.grey,
...
                          children: [
                            Expanded(
                              child: ListTile(
                                title: const Text("User"),
                                leading: Radio(
                                  key: const ValueKey(
                                      "registerPageRoleUserInput"),
                                  fillColor: MaterialStateColor.resolveWith(
                                      (states) =>
                                          Theme.of(context).primaryColor),
                                  value: Role("user"),
                                  groupValue: state.role,
                                  onChanged: (_) => {
...
                            ),
                            Expanded(
                              child: ListTile(
                                title: const Text("Admin"),
                                leading: Radio(
                                  key: const ValueKey(
                                      "registerPageRoleAdminInput"),
                                  fillColor: MaterialStateColor.resolveWith(
                                      (states) =>
                                          Theme.of(context).primaryColor),
                                  value: Role("admin"),
                                  groupValue: state.role,
                                  onChanged: (_) => {
...
                        ),
                        const SizedBox(height: 35),
                        SizedBox(
                          height: 60,
                          width: MediaQuery.of(context).size.width,
                          child: ElevatedButton(
                              key: const ValueKey("registerPageRegisterButton"),
                              onPressed: state.isSubmitting
                                  ? null
                                  : () {
                                      BlocProvider.of<RegisterFormBloc>(context)
                                          .add(const RegisterFormEvent
                                              .registerPressed());
...
