...
          return Form(
            // Check Status of show error message to decide form validator state
            autovalidateMode: state.showErrorMessages
                ? AutovalidateMode.always
                : AutovalidateMode.disabled,
            child: ListView(
              key: const ValueKey("editProfilePageListView"),
              // ignore: prefer_const_literals_to_create_immutables
              children: [
                // Top Label
                Container(
                  margin: const EdgeInsets.fromLTRB(0, 18, 0, 10),
                  child: const Center(
...
                      Container(
                        width: (MediaQuery.of(context).size.width - 16) * 0.5,
                        child: ListTile(
                          title: const Text("Female"),
                          leading: Radio(
                            key: const ValueKey(
                                "profileEditPageGenderFemaleInput"),
                            fillColor: MaterialStateColor.resolveWith(
                                (states) => Theme.of(context).primaryColor),
                            value: 'female',
                            onChanged: (genderValue) => {
                              _profileBloc.add(
                                ProfileEvent.genderChanged(
...
                const FormLabel(textValue: "Location"),
                // ignore: sized_box_for_whitespace
                Container(
                  width: MediaQuery.of(context).size.width * 0.45,
                  height: 60,
                  child: DropdownButton<String>(
                    key: const ValueKey("profileEditPageLocationDropdown"),
                    value:
                        state.location.value.fold((l) => "Ethiopia", (r) => r),
                    isExpanded: true,
                    onChanged: (locationValue) {
                      if (locationValue != null) {
                        _profileBloc
                            .add(ProfileEvent.locationChanged(locationValue));
                      }
                    },
                    items: <String>[
                      'Ethiopia',
                      'Kenya',
                      'Somalia',
                      'Eritrea',
                      'Sudan',
                      'Tanzania',
                      'Uganda'
                    ].map((String code) {
...
                      // ignore: sized_box_for_whitespace
                      Container(
                        width: MediaQuery.of(context).size.width * 0.45,
                        height: 60,
                        child: DropdownButton<String>(
                          key:
                              const ValueKey("profilEditPagePhoneCodeDropdown"),
                          value: state.phoneCode.value.fold(
                            (l) => "+251",
                            (r) => r,
                          ),
                          onChanged: (phoneCodeValue) {
                            if (phoneCodeValue != null) {
...
                                ProfileEvent.phoneCodeChanged(phoneCodeValue),
                              );
                            }
                          },
                          items: <String>[
                            "+251",
                            "+254",
                            "+252",
                            "+291",
                            "+249",
                            "+255",
                            "+256"
                          ].map((String code) {
...
                      const EdgeInsets.symmetric(vertical: 30, horizontal: 15),
                  child: state.isSubmitting
                      ? const Center(
                          child: CircularProgressIndicator(),
                        )
                      : MaterialButton(
                          key: const ValueKey("profileEditPageSaveButton"),
                          color: Theme.of(context).primaryColor,
                          onPressed: () {
                            _profileBloc.add(
                              ProfileEvent.fullNameChanged(
                                  _fullNameController.text),
                            );
...
