...
                  ),
                ),

                // Full Name Input area
                const FormLabel(textValue: "Full Name"),
                TextFormField(
                  key: const ValueKey("profilePageFullNameInput"),
                  autofocus: true,
                  autocorrect: false,
                  // initialValue: state.fullName.value.fold((l) => "", (r) => r),
                  initialValue: state.fullName.value.fold(
                    (l) => "",
                    (r) => r,
...
                      // ignore: sized_box_for_whitespace
                      Container(
                        width: (MediaQuery.of(context).size.width - 16) * 0.5,
                        child: ListTile(
                          title: const Text("Male"),
                          leading: Radio(
                            key: const ValueKey("profilePageGenderMaleInput"),
                            fillColor: MaterialStateColor.resolveWith(
                                (states) => Theme.of(context).primaryColor),
                            value: 'male',
                            onChanged: (genderValue) => {
                              _profileBloc.add(
                                ProfileEvent.genderChanged(
...
                      ),
                      // ignore: sized_box_for_whitespace
                      Container(
                        width: MediaQuery.of(context).size.width * 0.5,
                        height: 52,
                        child: TextFormField(
                          key: const ValueKey("profilePagePhoneNumberInput"),
                          initialValue:
                              state.phoneNumber.value.fold((l) => "", (r) => r),
                          decoration:
                              const InputDecoration(hintText: "Phone Digits"),
                          onChanged: (phoneNumberValue) {
                            if (phoneNumberValue.isNotEmpty) {
...
                      const EdgeInsets.symmetric(vertical: 30, horizontal: 15),
                  child: state.isSubmitting
                      ? const Center(
                          child: CircularProgressIndicator(),
                        )
                      : MaterialButton(
                          key: const ValueKey("profilePageSaveButton"),
                          color: Theme.of(context).primaryColor,
                          onPressed: () {
                            // Add Event
                            _profileBloc.add(const ProfileEvent.saveProfile());
                          },
                          child: const Text("Save Profile"),
...
